# app_reports

./: README.md  iniciar.bat  iniciar_reporte.vbs  pyproject.toml
.streamlit/: config.toml
src/: main.py
src/components/: analisis.py  calculos.py  estandares.py  grafica.py  menu.py  reporte_create.py  tipo_grafica.py
src/config/: configuracion.json
src/logic/: buscar.py  cal_adicionales.py  cal_complejos.py  cal_conteos.py  cal_grafic.py  datos_json.py  filtros_df.py  generar_excel.py
src/page/: buscar.py  report.py
