[project]
name = "streamlit-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-calamine>=0.4.0",
    "rapidfuzz>=3.13.0",
    "streamlit>=1.47.0",
    "streamlit-aggrid>=1.1.6",
    "streamlit-option-menu>=0.4.0",
    "xlsxwriter>=3.2.5",
]
